# text2sql-base

./: README.md  docker-compose.yml
.github/workflows/: python-publish.yaml  tests.yml
backend/: .pylintrc  Dockerfile  pyproject.toml  requirements.txt
backend/src/: launch_server.py
backend/src/api/: __init__.py  cache.py  config.py  decorators.py  docs.py
backend/src/api/routes/: data.py  questions.py  sql.py
backend/src/nlplatform/: __init__.py  utils.py
backend/src/nlplatform/base/: __init__.py
backend/src/nlplatform/connectors/: oracle.py  postgres.py  qdrant.py
backend/src/nlplatform/exceptions/: __init__.py
backend/src/nlplatform/models/pipSQL/: __init__.py
backend/src/nlplatform/types/: __init__.py
frontend/: Dockerfile  package.json  tsconfig.json
frontend/actions/: actions.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Avatar.tsx  Button.tsx  ChatBubble.tsx  ChatButtons.tsx  Chatscreen.tsx  CodeContainer.tsx  Homescreen.tsx  MessageHistory.tsx  Sidebar.tsx  Table.tsx
frontend/context/: ContextProvider.tsx
frontend/helpers/: enums.ts  types.ts
frontend/pages/: Dashboard.tsx
init-scripts/: VisualCost_Tablas_2024.csv  init.sql
